tests/golden/compile-pass/visibility_pub_access.rua
mod api {
    pub fn visible() -> i64 {
        1
    }
}

fn main() {
    let value = api::visible();
}
