tests/golden/compile-fail/type_let_annotation_mismatch.rua
fn main() {
    let enabled: bool = 1;
}
